--- a/use_stairu.html
+++ b/use_stairu.html
@@ -19,10 +19,10 @@
       こういう頭がよさそうな記述をしているように見えて<br>
       実はめちゃめちゃごり押しでできてるページも悪くないと思います<br>
       <br>
-      ちなみにソースコードをちらっと見ればわかると思うけど、<br>
-      スタイルで囲われてるところでそれぞれどういう形で作るか宣言をして、<br>
-      ボディのところでIDを指定してそのスタイルを適応させるお手軽なシステムさんです。<br>
-      一応簡単なメッセージカードの形で括ってみたりとかはできちゃうんだよすごいでしょ<br>
+      スタイルシートと真面目に向き合いました<br>
+      というか真面目にスタイルシートを書いたのは何年ぶりだろうか…<br>
+      階層がない形で見るなら別にスタイルシートいらないと思うけどねぼくは<br>
+      まあでも見た目は綺麗になるよねわかる<br>
     </div>
     <!-- 差出人情報 -->
     <div id="sender">
