--- a/なんちゃってサイトモドキ/diary.html
+++ b/なんちゃってサイトモドキ/diary.html
@@ -11,7 +11,7 @@
         <h1 class="header-title">共通のタイトル</h1>
         <nav>
             <div class="menu">
-                <a href="index.html">ホーム</a>
+                <a href="https://ootomonaiso.github.io/nenga_2024/なんちゃってサイトモドキ/index.html">ホーム</a>
                 <a href="page1.html">ページ1</a>
                 <a href="page2.html">ページ2</a>
                 <a href="#" class="active">日記</a>
